production/nlp/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "nlp-service"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9999
  type: NodePort
  selector:
    app: "nlp"
