production/nlp/k8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nlp-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: nlp-staging.almond.stanford.edu
  labels:
    app: nlp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "nlp-service"
              servicePort: 80
